# rAPIdtools

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/source/: api.rst  conf.py  index.rst
examples/: asset_analysis_example.ipynb  asset_analysis_example_generalized.ipynb  building_detection_from_bing.py  fire_damage_from_aerial.py  fire_recovery_analysis_from_street.py  label_mapping.py  longitudinal_analysis_example.ipynb  road_detection_from_aerial.py  single_image_vlm_inference.ipynb  single_image_vlm_inference.py
rapidtools/: __init__.py  config.py  constants.py  datasets.py
rapidtools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rapidtools/core/: __init__.py  bounding_box.py  image_asset.py  infrastructure_asset.py  physical_asset.py  polygon.py  polygon_region.py  region.py
rapidtools/data_sources/: __init__.py  bing_aerial_image_extractor.py  mapillary_client.py  mapillary_labels.py  orthomosaic_processor.py  orthomosaic_reader.py  tile_utils.py
rapidtools/inference/: __init__.py  claude_client.py  gemini_client.py  openai_client.py
rapidtools/models/: __init__.py  api_base.py  base.py  claude.py  claude_client.py  gemini.py  gemma4.py  llama.py  local_base.py  openai.py  sam3.py
rapidtools/processing/: __init__.py  feature_extractors.py  image_analyzers.py  image_extractors.py  image_segmenters.py  label_mappers.py  pano_utils.py  pipeline.py
rapidtools/processing/postprocessing/: buildings.py  roads.py
tests/: test_boundingbox.py  test_config.py  test_constants.py  test_image_asset.py  test_physical_asset.py  test_physical_asset_collection.py  test_polygon_region.py  test_region.py
