# ==============================================================================
# Build System Configuration (PEP 517)
# ==============================================================================
# This section tells tools like pip how to build your project.
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


# ==============================================================================
# Project Metadata (PEP 621)
# ==============================================================================
# This is the core information about your installable package.
[project]
name = "rapidtools"
version = "0.1.0"
description = "A toolkit for damage detection in regional assets using AI and geospatial data."
readme = "README.md"
authors = [
  { name = "UW RAPID", email = "uwrapid@uwrapid.org" },
]
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    # Full list: https://pypi.org/classifiers/
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Typing :: Typed",
]
keywords = ["gis", "geospatial", "damage detection", "computer vision"]

# --- Core Dependencies ---
# These are the libraries your application ALWAYS needs to run.
dependencies = [
    "accelerate",
    "bitsandbytes",
    "huggingface-hub",
    "mapbox_vector_tile",
    "matplotlib",
    "networkx",
    "pandas",
    "pillow",
    "pyproj",
    "pyshp",
    "rasterio",
    "requests",
    "scikit-image",
    "shapely>=2.0",
    "torch",
    "torchvision",
    "tqdm",
    "transformers>=5.5"
]

# --- Optional Dependencies ---
# Install with: pip install .[test] or pip install .[dev]
[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "requests-mock"
]
dev = [
    "rapidtools[test]", 
    "ruff",             
    "black",            
    "mypy",             
    "sphinx",   
    "shibuya",     
]

# --- Project URLs ---
# These are helpful links that will be displayed on PyPI if you publish the package.
[project.urls]
"Homepage" = "https://github.com/RAPID-Facility/rapidtools"
"Repository" = "https://github.com/RAPID-Facility/rapidtools"
"Bug Tracker" = "https://github.com/RAPID-Facility/rapidtools/issues"

# ==============================================================================
# Setuptools configuration: include the PEP 561 marker file
# ==============================================================================
[tool.setuptools.package-data]
rapidtools = ["py.typed"]

# ==============================================================================
# Tool Configurations
# ==============================================================================
# This section centralizes configuration for your development tools.

# --- Black (Code formatter) ---
[tool.black]
line-length = 88
target-version = ['py311']

# --- Ruff (Linter & Formatter) ---
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "Q",   # flake8-quotes (quote style)
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"

# --- MyPy (Static type checker) ---
[tool.mypy]
python_version = "3.11"
warn_return_any = false
ignore_missing_imports = true
disallow_untyped_defs = false
disable_error_code = ["import-untyped"] 

# --- Pytest (Testing framework) ---
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=rapidtools --cov-report=term-missing"
testpaths = [
    "tests",
]
